WIP : Swagger changes to better reflect code
